should be finished!

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/comp426-2022-fall/a03-valeriesho.git"
   },
   "author": "valeriesho",
-  "license": "GPL-3.0-or-later",
+  "license": "MIT",
   "bin": {
     "roll-dice": "./bin/cli.js"
   },
